update reranking to reasoning

--- a/legacy/index.html
+++ b/legacy/index.html
@@ -6,7 +6,7 @@
     <title>GRAIL-V at CVPR 2026 | Grounded Retrieval & Agentic Intelligence for Vision-Language</title>
     <meta
       name="description"
-      content="GRAIL-V is a CVPR 2026 workshop on grounded multimodal retrieval, reranking, and verification for agentic vision systems."
+      content="GRAIL-V is a CVPR 2026 workshop on grounded multimodal retrieval, reasoning, and verification for agentic vision systems."
     />
     <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
